# wegofwd-video

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  watch.yml
.watch/: README.md
schema/: video_brief.v1.json
tests/: test_allowlist.py  test_capabilities.py  test_providers.py  test_registry.py  test_versioning.py
wegofwd_video/: __init__.py  contract.py  errors.py  registry.py
wegofwd_video/providers/: __init__.py  local_render.py  veo.py
