[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wegofwd-video"
version = "0.1.1"
description = "Shared video-generation seam (provider-agnostic brief/request/result, registry, provenance) for the wegofwd product family. See ADR-026."
readme = "README.md"
# 3.10 floor: kathai-chithiram (a 3.10 consumer) drives the deterministic-renderer
# path. The seam is 3.10-compatible (annotations are PEP 563 deferred); pramana
# (3.12) and wegofwd-llm (3.11) are unaffected. Lowered in v0.1.1 — the second
# consumer surfacing a real constraint, exactly as ADR-026 D7 anticipated.
requires-python = ">=3.10"
authors = [{ name = "Sivakumar Mambakkam" }]
license = { text = "Proprietary" }

# Runtime deps are deliberately minimal — the core seam (contract/registry/
# provenance/local-render) has ZERO runtime deps, so kathai's deterministic path
# pulls nothing. The Google SDK is an OPTIONAL extra; veo.py imports it lazily and
# raises VideoConfigurationError if the extra is absent.
dependencies = []

[project.optional-dependencies]
veo = ["google-genai>=0.3"]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["wegofwd_video"]

# ── Ruff (mirrors wegofwd-llm so a file passes lint identically across the family) ──
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20", "RUF"]
ignore = [
    "E501",   # handled by formatter
    "S101",   # assert in tests
    "RUF001", # ambiguous unicode in strings (EN DASH in docstrings)
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["wegofwd_video"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
